--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
    <div class="docs-section">
       <h4>Bio</h4>
       <p>
-         I am a Ph.D. student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
+         I am a second-year Ph.D. student in Social Data Science at the <a href='https://www.oii.ox.ac.uk/' target="_blank" rel="noopener noreferrer">Oxford Internet Institute</a> of the University of Oxford where I am supervised by <a href='https://www.oii.ox.ac.uk/people/profiles/ralph-schroeder/' target="_blank" rel="noopener noreferrer">Ralph Schroeder</a> and <a href='http://www.scotthale.net/blog/' target="_blank" rel="noopener noreferrer">Scott Hale</a>.
          I also consult for the World Bank under the supervision of <a href='http://www.samuelfraiberger.com/' target="_blank" rel="noopener noreferrer">Samuel Fraiberger</a> and am affiliated with the <a href='https://nyunetworks.github.io/' target="_blank" rel="noopener noreferrer">Open Networks and Big Data Lab</a> at New York University.
-         I am broadly interested in online harms, content moderation, and natural language processing.
+         My PhD research is focused on the moderation of online harmful content. Specifically, I study the extent to which such moderation may treat users unequally across geographies, from unequal automatic detection performance to unequal moderation enforcement through a potential misalignment between user preferences towards moderation and community guidelines.
       </p>
 
       <p>
@@ -211,7 +211,22 @@
     <div class="newsbox" style="height:170px;overflow:auto;border-radius: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 5px;;
     display: inline-block; text-align: left;">
     <table style="width: 100%">
+        <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-04-16</td>
+          <td style="width: 90%">
+              📜 Paper accepted at ACL 2024: "NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data"
+                              <a href="https://arxiv.org/abs/2403.19260">(preprint here)</a>
 
+          </td>
+      </tr>
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-04-16</td>
+          <td style="width: 90%">
+              📜 Paper accepted at the Workshop on Online Abuse and Harms (WOAH), colocated with NAACL 2024: "From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets"
+                              <a href="https://arxiv.org/abs/2404.17874">(link)</a>
+
+          </td>
+      </tr>
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2023-10-20</td>
           <td style="width: 90%">
