--- a/research.html
+++ b/research.html
@@ -138,7 +138,7 @@
 
       <h4>Publications</h4>
 
-         <p>Most recent list on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a>.<br/>
+         <p>Most recent list on <a href="https://scholar.google.com/citations?user=RIB-aogAAAAJ&hl=en" target="_blank">Google Scholar</a> or <a href="https://www.semanticscholar.org/author/Manuel-Tonneau/2159207178" target="_blank">Semantic Scholar</a>.<br/>
           <sup>‡</sup> indicates equal contribution.
           </p>
       <ul class="tab-nav">
@@ -152,7 +152,31 @@
       <div class="tab-content">
          <div class="tab-pane active" id="papers-all">
             <span class="anchor" id="JKOICNN"></span>
-
+            <!--paper 1-->
+            <div class="paper">
+               <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
+               <p><b>Manuel Tonneau</b>, Pedro Vitor Quinta de Castro, Karim Lasri, Ibrahim Farouq, Lakshminarayanan Subramanian, Victor Orozco-Olvera, Samuel Fraiberger</p>
+               <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
+               <div class="paper-buttons">
+                  <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">Paper</a>
+               </div>
+            </div>
+            <div class="paper">
+               <p class="title"><b>From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets</b></p>
+               <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
+               <p><i>WOAH'24: Workshop on Online Abuse and Harms.</i></p>
+               <div class="paper-buttons">
+                  <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">Paper</a>
+               </div>
+            </div>
+            <div class="paper">
+               <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
+               Boris Sobol, <b>Manuel Tonneau<sup>‡</sup></b>, Samuel Fraiberger, Do Lee, Nir Grinberg</p>
+               <p><i>ICWSM'24: International AAAI Conference on Web and Social Media.</i></p>
+<!--               <div class="paper-buttons">-->
+<!--                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>-->
+<!--               </div>-->
+            </div>
             <!--paper 1-->
             <div class="paper">
                <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
