--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     display: inline-block; text-align: left;">
     <table style="width: 100%">
         <tr>
-        <td style="width: 10%; min-width: 75px;" class="datev">2024-04-16</td>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-05-15</td>
           <td style="width: 90%">
               📜 Paper accepted at ACL 2024: "NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data"
                               <a href="https://arxiv.org/abs/2403.19260">(preprint here)</a>
@@ -222,8 +222,16 @@
       <tr>
         <td style="width: 10%; min-width: 75px;" class="datev">2024-04-16</td>
           <td style="width: 90%">
-              📜 Paper accepted at the Workshop on Online Abuse and Harms (WOAH), colocated with NAACL 2024: "From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets"
+              📜 Paper accepted at the Workshop on Online Abuse and Harms (WOAH), co-located at NAACL 2024: "From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets"
                               <a href="https://arxiv.org/abs/2404.17874">(link)</a>
+
+          </td>
+      </tr>
+      <tr>
+        <td style="width: 10%; min-width: 75px;" class="datev">2024-03-15</td>
+          <td style="width: 90%">
+              📜 Paper accepted at ICWSM 2024: "280 Characters to Employment: Using Twitter to Quantify Job Vacancies"
+<!--                              <a href="https://arxiv.org/abs/2404.17874">(link)</a>-->
 
           </td>
       </tr>
