--- a/research.html
+++ b/research.html
@@ -164,7 +164,7 @@
             <div class="paper">
                <p class="title"><b>From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets</b></p>
                <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
-               <p><i>WOAH'24: Workshop on Online Abuse and Harms.</i></p>
+               <p><i>WOAH'24: Workshop on Online Abuse and Harms</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">Paper</a>
                </div>
@@ -172,7 +172,7 @@
             <div class="paper">
                <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
                Boris Sobol, <b>Manuel Tonneau</b>, Samuel Fraiberger, Do Lee, Nir Grinberg</p>
-               <p><i>ICWSM'24: International AAAI Conference on Web and Social Media.</i></p>
+               <p><i>ICWSM'24: International AAAI Conference on Web and Social Media</i></p>
 <!--               <div class="paper-buttons">-->
 <!--                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>-->
 <!--               </div>-->
@@ -181,7 +181,7 @@
             <div class="paper">
                <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
                <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
-               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media.</i></p>
+               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
                </div>
