--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
-<!--                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">-->
-<!--               <i class="fa fa-mastodon" aria-hidden="true"></i>-->
-<!--            </span>-->
+                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
+               <img src="/assets/images/mastodon.svg" style="width:15px;"/>
+            </span>
             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </span>
