--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
+                                           <span onclick="window.open('https://bsky.app/profile/manueltonneau.bsky.social')" style="cursor: pointer">
+               <img src="/assets/images/bluesky.png" style="width:20px;"/>
+            </span>
                            <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
                <img src="/assets/images/mastodon.svg" style="width:20px;"/>
             </span>
