--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
             <p>manuel.tonneau@oii.ox.ac.uk</p>
-            <p>
+            <p>Social:
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
@@ -89,12 +89,16 @@
                            <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
                <img src="/assets/images/mastodon.svg" style="width:20px;"/>
             </span>
-            <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
+                            <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </span>
+                </p>
+          <p> Code, Data and Models:
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
+              </p>
+          <p> Papers: 
                            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
                <i class="ai ai-google-scholar" aria-hidden="true"></i>
             </span>
