add semantic scholar

--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
               </p>
-          <p> Papers: 
+          <p> Papers:
                            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
                <i class="ai ai-google-scholar" aria-hidden="true"></i>
             </span>
-
+                           <span onclick="window.open('https://www.semanticscholar.org/author/Manuel-Tonneau/2159207178')" style="cursor: pointer">
+               <img src="/assets/images/semantic.png" style="width:20px;"/>
+            </span>
 <!--            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">-->
 <!--               <i class="fa fa-twitter" aria-hidden="true"></i>-->
 <!--            </span>-->
