change color mastodon

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                <img src="/assets/images/bluesky.png" style="width:20px;"/>
             </span>
                            <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
-               <img src="/assets/images/mastodon.svg" style="width:20px;"/>
+               <img src="/assets/images/mastodon.png" style="width:20px;"/>
             </span>
                             <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
