add hugging face

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
+                          <span onclick="window.open('https://huggingface.co/manueltonneau')" style="cursor: pointer">
+               <img src="/assets/images/hf.svg" style="width:20px;"/>
+            </span>
               </p>
           <p> Papers:
                            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
