rename resources part

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </span>
                 </p>
-          <p> Code, Data and Models:
+          <p> Resources:
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
