--- a/research.html
+++ b/research.html
@@ -185,6 +185,9 @@
                <div class="paper-buttons">
                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
                </div>
+                               <div class="paper-buttons">
+                  <a class="button" href="https://x.com/ManuelTonneau/status/1665949249559752705" target="_blank">Twitter Thread</a>
+               </div>
             </div>
 
             <!--paper 2-->
