add twitter thread ACL 22

--- a/research.html
+++ b/research.html
@@ -194,6 +194,7 @@
                <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
                   <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
+                   <a class="button" href="https://x.com/ManuelTonneau/status/1519304277252001793" target="_blank">Twitter Thread</a>
                </div>
             </div>
 
