add logos on research page

--- a/research.html
+++ b/research.html
@@ -81,23 +81,36 @@
 
 
             <p>manuel.tonneau@oii.ox.ac.uk</p>
-            <p>
+            <p> </p>
+            <p>Social:
                            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">
                <i class="fa fa-twitter" aria-hidden="true"></i>
             </span>
-<!--                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">-->
-<!--               <i class="fa-brands fa-mastodon" aria-hidden="true"></i>-->
-<!--            </span>-->
-            <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
+                                           <span onclick="window.open('https://bsky.app/profile/manueltonneau.bsky.social')" style="cursor: pointer">
+               <img src="/assets/images/bluesky.png" style="width:20px;"/>
+            </span>
+                           <span onclick="window.open('https://piaille.fr/@manueltonneau')" style="cursor: pointer">
+               <img src="/assets/images/mastodon.svg" style="width:20px;"/>
+            </span>
+                            <span onclick="window.open('https://www.linkedin.com/in/manuel-tonneau/')" style="cursor: pointer">
                <i class="fa fa-linkedin-square" aria-hidden="true"></i>
             </span>
+                </p>
+          <p> Resources:
             <span onclick="window.open('https://github.com/manueltonneau')" style="cursor: pointer">
                <i class="fa fa-github" aria-hidden="true"></i>
             </span>
+                          <span onclick="window.open('https://huggingface.co/manueltonneau')" style="cursor: pointer">
+               <img src="/assets/images/hf.svg" style="width:20px;"/>
+            </span>
+              </p>
+          <p> Papers:
                            <span onclick="window.open('https://scholar.google.co.uk/citations?user=RIB-aogAAAAJ&hl=en')" style="cursor: pointer">
                <i class="ai ai-google-scholar" aria-hidden="true"></i>
             </span>
-
+                           <span onclick="window.open('https://www.semanticscholar.org/author/Manuel-Tonneau/2159207178')" style="cursor: pointer">
+               <img src="/assets/images/semantic.png" style="width:20px;"/>
+            </span>
 <!--            <span onclick="window.open('https://twitter.com/ManuelTonneau')" style="cursor: pointer">-->
 <!--               <i class="fa fa-twitter" aria-hidden="true"></i>-->
 <!--            </span>-->
