add twitter threads

--- a/research.html
+++ b/research.html
@@ -171,7 +171,7 @@
                <p><b>Manuel Tonneau</b>, Pedro Vitor Quinta de Castro, Karim Lasri, Ibrahim Farouq, Lakshminarayanan Subramanian, Victor Orozco-Olvera, Samuel Fraiberger</p>
                <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">Paper</a>
+                  <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">📜 Paper</a>
                </div>
             </div>
             <div class="paper">
@@ -179,7 +179,8 @@
                <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
                <p><i>WOAH'24: Workshop on Online Abuse and Harms</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">Paper</a>
+                  <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">📜 Paper</a>
+                   <a class="button" href="https://x.com/ManuelTonneau/status/1793628251455389733" target="_blank">🐦 Twitter Thread</a>
                </div>
             </div>
             <div class="paper">
@@ -196,8 +197,8 @@
                <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
                <p><i>ICWSM'23: International AAAI Conference on Web and Social Media</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>
-                   <a class="button" href="https://x.com/ManuelTonneau/status/1665949249559752705" target="_blank">Twitter Thread</a>
+                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">📜 Paper</a>
+                   <a class="button" href="https://x.com/ManuelTonneau/status/1665949249559752705" target="_blank">🐦 Twitter Thread</a>
             </div>
 
             <!--paper 2-->
@@ -206,8 +207,8 @@
                <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
                <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
                <div class="paper-buttons">
-                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">Paper</a>
-                   <a class="button" href="https://x.com/ManuelTonneau/status/1519304277252001793" target="_blank">Twitter Thread</a>
+                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">📜 Paper</a>
+                   <a class="button" href="https://x.com/ManuelTonneau/status/1519304277252001793" target="_blank">🐦 Twitter Thread</a>
                </div>
             </div>
 
