--- a/research.html
+++ b/research.html
@@ -162,6 +162,21 @@
 
       </ul>
 
+             <!-- Paper 1 -->
+      <div class="paper pub-entry">
+         <div class="pub-image">
+            <img src="assets/images/ic2s2_2023.jpg" alt="NaijaHate" max-height="300px" width="300px">
+         </div>
+         <div class="pub-text">
+            <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
+            <p><b>Manuel Tonneau</b>, Pedro Vitor Quinta de Castro, Karim Lasri, Ibrahim Farouq, Lakshminarayanan Subramanian, Victor Orozco-Olvera, Samuel Fraiberger</p>
+            <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
+            <div class="paper-buttons">
+               <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">📜 Paper</a>
+            </div>
+         </div>
+      </div>
+
       <div class="tab-content">
          <div class="tab-pane active" id="papers-all">
             <span class="anchor" id="JKOICNN"></span>
