add ic2s2 image

--- a/research.html
+++ b/research.html
@@ -202,7 +202,7 @@
       <!-- Paper 1 -->
           <div class="paper pub-entry">
              <div class="pub-image">
-                <img src="path/to/image1.png" alt="NaijaHate" style="max-height: 150px; width: auto;">
+                <img src="assets/images/ic2s2_2023.jpg" alt="NaijaHate" style="max-height: 150px; width: auto;">
              </div>
              <div class="pub-text">
                 <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
