--- a/research.html
+++ b/research.html
@@ -199,10 +199,14 @@
 
       </ul>
 
-      <!-- Paper 1 -->
-          <div class="paper pub-entry">
+    <div class="tab-content">
+       <div class="tab-pane active" id="papers-all">
+          <span class="anchor" id="JKOICNN"></span>
+
+          <!-- paper 1 -->
+          <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/ic2s2_2023.jpg" alt="NaijaHate" style="max-height: 150px; width: auto;">
+                <img src="assets/images/naijahate.pdf" alt="NaijaHate">
              </div>
              <div class="pub-text">
                 <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
@@ -214,59 +218,69 @@
              </div>
           </div>
 
-      <div class="tab-content">
-         <div class="tab-pane active" id="papers-all">
-            <span class="anchor" id="JKOICNN"></span>
-            <!--paper 1-->
-            <div class="paper">
-               <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
-               <p><b>Manuel Tonneau</b>, Pedro Vitor Quinta de Castro, Karim Lasri, Ibrahim Farouq, Lakshminarayanan Subramanian, Victor Orozco-Olvera, Samuel Fraiberger</p>
-               <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">📜 Paper</a>
-               </div>
-            </div>
-            <div class="paper">
-               <p class="title"><b>From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets</b></p>
-               <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
-               <p><i>WOAH'24: Workshop on Online Abuse and Harms</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">📜 Paper</a>
+          <!-- paper 2 -->
+          <div class="pub-entry">
+             <div class="pub-image">
+                <img src="assets/images/survey.png" alt="From Languages to Geographies">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets</b></p>
+                <p><b>Manuel Tonneau</b>, Diyi Liu, Samuel Fraiberger, Ralph Schroeder, Scott A. Hale, Paul Röttger</p>
+                <p><i>WOAH'24: Workshop on Online Abuse and Harms</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://arxiv.org/abs/2404.17874" target="_blank">📜 Paper</a>
                    <a class="button" href="https://x.com/ManuelTonneau/status/1793628251455389733" target="_blank">🐦 Twitter Thread</a>
-               </div>
-            </div>
-            <div class="paper">
-               <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
-               Boris Sobol, <b>Manuel Tonneau</b>, Samuel Fraiberger, Do Lee, Nir Grinberg</p>
-               <p><i>ICWSM'24: International AAAI Conference on Web and Social Media</i></p>
-<!--               <div class="paper-buttons">-->
-<!--                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">Paper</a>-->
-<!--               </div>-->
-            </div>
-            <!--paper 1-->
-            <div class="paper">
-               <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
-               <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
-               <p><i>ICWSM'23: International AAAI Conference on Web and Social Media</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">📜 Paper</a>
+                </div>
+             </div>
+          </div>
+
+          <!-- paper 3 -->
+          <div class="pub-entry">
+             <div class="pub-image">
+                <img src="assets/images/job_offers.pdf" alt="280 Characters to Employment">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
+                <p>Boris Sobol, <b>Manuel Tonneau</b>, Samuel Fraiberger, Do Lee, Nir Grinberg</p>
+                <p><i>ICWSM'24: International AAAI Conference on Web and Social Media</i></p>
+             </div>
+          </div>
+
+          <!-- paper 4 -->
+          <div class="pub-entry">
+             <div class="pub-image">
+                <img src="assets/images/demographic_inference.pdf" alt="Large-Scale Demographic Inference">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
+                <p>Karim Lasri<sup>‡</sup>, <b>Manuel Tonneau<sup>‡</sup></b>, Haaya Naushan, Niyati Malhotra, Ibrahim Farouq, Victor Orozco, Samuel Fraiberger</p>
+                <p><i>ICWSM'23: International AAAI Conference on Web and Social Media</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/22165" target="_blank">📜 Paper</a>
                    <a class="button" href="https://x.com/ManuelTonneau/status/1665949249559752705" target="_blank">🐦 Twitter Thread</a>
-            </div>
+                </div>
+             </div>
+          </div>
 
-            <!--paper 2-->
-            <div class="paper">
-               <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
-               <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
-               <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
-               <div class="paper-buttons">
-                  <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">📜 Paper</a>
+          <!-- paper 5 -->
+          <div class="pub-entry">
+             <div class="pub-image">
+                <img src="assets/images/employment_detection.pdf" alt="Multilingual Detection of Personal Employment Status">
+             </div>
+             <div class="pub-text">
+                <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
+                <p><b>Manuel Tonneau</b>, Dhaval Adjodah, Joao Palotti, Nir Grinberg, Samuel Fraiberger</p>
+                <p><i>ACL'22: Annual Meeting of the Association for Computational Linguistics</i></p>
+                <div class="paper-buttons">
+                   <a class="button" href="https://aclanthology.org/2022.acl-long.453/" target="_blank">📜 Paper</a>
                    <a class="button" href="https://x.com/ManuelTonneau/status/1519304277252001793" target="_blank">🐦 Twitter Thread</a>
-               </div>
-            </div>
+                </div>
+             </div>
+          </div>
 
-         </div>
-      </div>
-   </div>
+       </div>
+    </div>
+
 </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
