--- a/research.html
+++ b/research.html
@@ -206,7 +206,7 @@
           <!-- paper 1 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/naijahate.pdf" alt="NaijaHate">
+                <img src="assets/images/papers/naijahate.pdf" alt="NaijaHate">
              </div>
              <div class="pub-text">
                 <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
@@ -221,7 +221,7 @@
           <!-- paper 2 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/survey.png" alt="From Languages to Geographies">
+                <img src="assets/images/papers/survey.png" alt="From Languages to Geographies">
              </div>
              <div class="pub-text">
                 <p class="title"><b>From Languages to Geographies: Towards Evaluating Cultural Bias in Hate Speech Datasets</b></p>
@@ -237,7 +237,7 @@
           <!-- paper 3 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/job_offers.pdf" alt="280 Characters to Employment">
+                <img src="assets/images/papers/job_offers.pdf" alt="280 Characters to Employment">
              </div>
              <div class="pub-text">
                 <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
@@ -249,7 +249,7 @@
           <!-- paper 4 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/demographic_inference.pdf" alt="Large-Scale Demographic Inference">
+                <img src="assets/images/papers/demographic_inference.pdf" alt="Large-Scale Demographic Inference">
              </div>
              <div class="pub-text">
                 <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
@@ -265,7 +265,7 @@
           <!-- paper 5 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/employment_detection.pdf" alt="Multilingual Detection of Personal Employment Status">
+                <img src="assets/images/papers/employment_detection.pdf" alt="Multilingual Detection of Personal Employment Status">
              </div>
              <div class="pub-text">
                 <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
