change paths to png

--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
    .pub-image {
       flex-shrink: 0;
       margin-right: 20px;
-      width: 200px; /* Set the width of the square */
+      width: 175px; /* Set the width of the square */
       height: 100px; /* Set the height of the square */
       overflow: hidden; /* Ensure anything outside the bounds is hidden */
       display: flex; /* Center the image inside the square */
@@ -214,7 +214,7 @@
           <!-- paper 1 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/papers/naijahate.pdf" alt="NaijaHate">
+                <img src="assets/images/papers/naijahate.png" alt="NaijaHate">
              </div>
              <div class="pub-text">
                 <p class="title"><b>NaijaHate: Evaluating Hate Speech Detection on Nigerian Twitter Using Representative Data</b></p>
@@ -245,7 +245,7 @@
           <!-- paper 3 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/papers/job_offers.pdf" alt="280 Characters to Employment">
+                <img src="assets/images/papers/job_offers.png" alt="280 Characters to Employment">
              </div>
              <div class="pub-text">
                 <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
@@ -257,7 +257,7 @@
           <!-- paper 4 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/papers/demographic_inference.pdf" alt="Large-Scale Demographic Inference">
+                <img src="assets/images/papers/demographic_inference.png" alt="Large-Scale Demographic Inference">
              </div>
              <div class="pub-text">
                 <p class="title"><b>Large-Scale Demographic Inference of Social Media Users in a Low-Resource Scenario</b></p>
@@ -273,7 +273,7 @@
           <!-- paper 5 -->
           <div class="pub-entry">
              <div class="pub-image">
-                <img src="assets/images/papers/employment_detection.pdf" alt="Multilingual Detection of Personal Employment Status">
+                <img src="assets/images/papers/employment_detection.png" alt="Multilingual Detection of Personal Employment Status">
              </div>
              <div class="pub-text">
                 <p class="title"><b>Multilingual Detection of Personal Employment Status on Twitter</b></p>
