--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@
    .pub-image img {
       width: 100%; /* Ensure the image covers the square */
       height: 100%; /* Ensure the image covers the square */
-      object-fit: cover; /* Crop the image to fit within the square */
+      object-fit: contain; 
    }
 
    .pub-text {
