--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
        </p>
       <p>
          Prior to the Ph.D., I worked as a research assistant at the World Bank and the <a href='https://cmb.huma-num.fr//' target="_blank" rel="noopener noreferrer">Centre Marc Bloch</a> on various computational social science projects.
-         I hold an Engineering degree in Statistics and Economics (eq. to MSc) from ENSAE Paris as well as an MSc in Economics from Humboldt-Universität zu Berlin.
+         I hold an Engineering degree in Statistics and Economics (eq. to MSc) from <a href='https://www.ensae.fr/en' target="_blank" rel="noopener noreferrer">ENSAE Paris</a> as well as an MSc in Economics from <a href='https://www.hu-berlin.de/en' target="_blank" rel="noopener noreferrer">Humboldt-Universität zu Berlin</a>.
          My doctoral work is generously funded by a Global Merit Award from the <a href='https://www.oii.ox.ac.uk/about/giving/the-shirley-scholars-fund/' target="_blank" rel="noopener noreferrer">Shirley Scholars Fund</a>.
 
       </p>
