--- a/research.html
+++ b/research.html
@@ -251,6 +251,9 @@
                 <p class="title"><b>280 Characters to Employment: Using Twitter to Quantify Job Vacancies</b></p>
                 <p>Boris Sobol, <b>Manuel Tonneau</b>, Samuel Fraiberger, Do Lee, Nir Grinberg</p>
                 <p><i>ICWSM'24: International AAAI Conference on Web and Social Media</i></p>
+                 <div class="paper-buttons">
+                   <a class="button" href="https://ojs.aaai.org/index.php/ICWSM/article/view/31403" target="_blank">📜 Paper</a>
+                </div>
              </div>
           </div>
 
