--- a/receipts.html
+++ b/receipts.html
@@ -76,8 +76,11 @@
 <div class="docs-section">
   <h4>Contribution receipts:</h4>
   <p>
-     We will list the contribution receipts on this page after all participants have taken the survey.
+     In this page, we publish the receipts of donations from research studies anonymized by ID.
   </p>
+  <ul>
+    <li>Study 82IERLX: In progress</li>
+  </ul>
 </div>
 
 </body>
