--- a/research.html
+++ b/research.html
@@ -222,6 +222,7 @@
                 <p><i>ACL'24: Annual Meeting of the Association for Computational Linguistics</i></p>
                 <div class="paper-buttons">
                    <a class="button" href="https://arxiv.org/abs/2403.19260" target="_blank">📜 Paper</a>
+                    <a class="button" href="https://x.com/ManuelTonneau/status/1821125918691123289" target="_blank">🐦 Twitter Thread</a>
                 </div>
              </div>
           </div>
